assets/css/index.css
/* ... */
input[type="file"] {
  outline: 0;
  box-sizing: border-box;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  border: 1px solid var(--crust);
  border-radius: var(--border-radius);
  background: var(--mantle);
  color: var(--text);
  cursor: pointer;
  display: block;
  width: 100%;
  height: auto;
  padding: 0.75em 0.5em;
  font-size: 12px;
  line-height: 1;
}

fieldset {
  padding: 0.5em 1em;
  border-radius: var(--border-radius);
}

form label,
form select,
output {
  display: block;
}

form label:not(:first-child) {
  margin-top: 1em;
}

form p label {
  display: inline;
}

form p label + label {
  margin-left: 1em;
}

textarea {
  outline: 0;
  box-sizing: border-box;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  font-size: 1em;
  border: 1px solid var(--curst);
  border-radius: var(--border-radius);
  background: var(--mantle);
  color: var(--text);
  display: block;
  width: 100%;
  line-height: calc(2em - 1px * 2 - (0.25em - 1px) * 2);
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  min-height: 4.5em;
  resize: vertical;
  padding-top: 0.5em;
  padding-bottom: 0.5em;
}

textarea[disabled],
button[disabled],
select[disabled],
input[disabled] {
  color: var(--subtext0);
  cursor: not-allowed;
}

div.chip-container {
  background: linear-gradient(var(--crust) 0%, var(--crust) 100%) 0 0,
    linear-gradient(var(--crust) 0%, var(--crust) 100%) 100% 0;
  background-attachment: scroll, scroll;
  background-size: 1px 100%, 1px 100%;
  background-repeat: no-repeat, no-repeat;

  display: flex;
  font-size: 1em;
  align-items: baseline;
  margin-top: 0.5em;
  overflow-x: auto;
}

div.chip-container div.chip:nth-of-type(1) {
  border-left: 1px solid var(--base);
}

div.chip-container div.chip:nth-last-of-type(1) {
  border-right: 1px solid var(--base);
}

div.chip {
  width: auto;
  min-width: fit-content;
}

label.chip {
  outline: 0;
  box-sizing: border-box;
  height: 2em;
  margin: 0;
  padding: calc(0.25em - 1px) 0.5em;
  font-family: inherit;
  font-size: 1em;
  display: inline-block;
  width: auto;
  min-width: fit-content;
  cursor: pointer;
  transition: background ease 0.33s;

  border-radius: 500px;

  border: 1px solid var(--surface0);
  background: var(--surface0);
  color: var(--text);

  margin-top: 0 !important;
  margin-right: 0.2em;
}

label.chip:focus,
label.chip:hover,
input.chip[type="checkbox"]:checked + label.chip {
  border: 1px solid var(--green);
  background: var(--green);
  color: var(--base);
}

input.chip[type="checkbox"] {
  display: none;
}

.blur {
  filter: blur(2px);
  z-index: -1;
  min-height: 100%;
  min-width: 100%;
  position: absolute;
  background-size: 200%;
  background-position: center;
}

#ingredient-instruction-container {
  /* display: flex; */
  /* position: relative; */

  scroll-snap-type: x mandatory;
  overflow-x: scroll;

  display: grid;
  grid-template-columns: 100% 100%;
  grid-template-rows: fit-content(75vh);
}

#instructions,
#ingredients {
  scroll-snap-align: start;

  overflow-y: scroll;
  white-space: normal;
  width: 100%;
}

@media (min-width: 480px) {
  #ingredient-instruction-container {
    display: flex;
    white-space: normal;
    height: fit-content;
    grid-template-columns: 1fr 1fr;
    overflow-x: unset;
  }

  #ingredients {
    height: fit-content;
    transition: margin-top 133ms ease-out;
    top: 0;
  }

  #instructions {
    height: fit-content;
  }
}

.strike {
  text-decoration-line: line-through;
}

li[onclick="strike(this)"] {
  cursor: pointer;
}

